--- a/Database and HTML/index.html
+++ b/Database and HTML/index.html
@@ -102,7 +102,7 @@
                 div.innerHTML = `
             <div class="doc-header" style="display: flex; align-items: center; justify-content: space-between;" onclick="toggleDropdown(event)">
                 <span>
-                    <b>${f.fileName}</b> <span style="color: #888;">[${f.category || ''}]</span>
+                    <b>${f.fileName}</b> <span style="color: #888;">[${f.uploadDate} | ${f.category || ''}]</span>
                 </span>
                 <button class="delete-btn" onclick="deleteFile(event, '${encodeURIComponent(f.fileName)}')">Delete</button>
             </div>
